--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   url_launcher:
   qrscan: ^0.2.22
+  shared_preferences: ^0.5.12+4
+  permission_handler: ^5.0.1+1
 
 
 
