--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   permission_handler: ^5.0.1+1
   slider_button: ^0.6.0
-  fluttertoast: ^3.1.0
+  sizer: ^1.1.8
 
 
 
