--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,13 @@ dependencies:
   permission_handler: ^5.0.1+1
   slider_button: ^0.6.0
   sizer: ^1.1.8
+  flutter_launcher_icons: "^0.8.0"
 
 
-
+flutter_icons:
+  image_path: "icon/icon.png"
+  android: true
+  ios: true
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
